--- a/TA_officescan/README
+++ b/TA_officescan/README
@@ -4,7 +4,7 @@ Trend Micro OfficeScan TA for Splunk. Fields extractions and CIM mapping
 
 Author Information
 Original author: UnderDefense LLC
-Version: 1.0.0
+Version: 1.0.2
 
 Updates history:
 [1.0.0]
@@ -12,11 +12,19 @@ Updates history:
 - Fields extractions
 - CIM Malware mapping
 
+[1.0.1]
+- App icons added
+- local.meta removed
+
+[1.0.2]
+- Fixed not URL encoded string in tags.conf
+
+
 Configurations: 
 - Install this TA from splunkbase or manually on your search heads, indexers and heavy forwarders.
 - Configure port listening in Data Inputs or manually in inputs.conf. Set sourcetype to "officescan"
 - Go to Settings - Advanced Search - Search macros and change definition of "officescan_index" macros to index with your OfficeScan logs(you can do it making changes in macros.conf
-- Go to Search and Reporting. Use `officescan_index` search query to get your data.
+- Go to Search and Reporting. Use \`officescan_index\` search query to get your data.
 - Enjoy!
 
 Email support during weekday from 08:00 to 16:00 by UTC time
